--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
         <title> Resume</title>
     </head>
     <body>
-        <h1>Hello world!</h1>
+        <div>
+            <h1>K Nithin</h1>
+            <ul>
+                <li> Email : knithinreddy13@gmail.com </li>
+                <li>Github : <a href="github.com/Nithin1317/" /></li>
+                <li>Phone : 8341688198 </li>
+            </ul>
+        </div>
+        
     </body>
 </html>
