--- a/index.html
+++ b/index.html
@@ -11,6 +11,35 @@
                 <li>Phone : 8341688198 </li>
             </ul>
         </div>
-        
+        <div>
+            <h2>Work Experience</h2>
+            <hr>
+            <h3>Company Name</h3>
+            <p>Description of Company(2023-2024)</p>
+            <ul>
+                <li>
+                    worked on thing 1
+                </li>
+            </ul>
+        </div>
+        <hr>
+        <div>
+            <h2>Education</h2>
+            <hr>
+            <h3>College Name</h3>
+            <p>Description of College(2023-2024)</p>
+        </div>
+        <hr>
+        <div>
+            <h2>Projects</h2>
+            <hr>
+            <h3>project one</h3>
+            <p>Description of project(2023-2024)</p>
+            <ul>
+                <li>
+                    worked on thing 1
+                </li>
+            </ul>
+        </div>
     </body>
 </html>
