--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             <h1>K Nithin</h1>
             <ul>
                 <li> Email : knithinreddy13@gmail.com </li>
-                <li>Github : <a href="github.com/Nithin1317/" /></li>
+                <li>Github : <a href="github.com/Nithin1317/" >github.com/Nithin1317/</a></li>
                 <li>Phone : 8341688198 </li>
             </ul>
         </div>
